--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "ember-export-application-global": "^1.0.5",
     "ember-load-initializers": "^0.5.1",
     "ember-local-storage": "1.1.0",
+    "ember-power-select": "1.0.0-beta.19",
     "ember-resolver": "^2.0.3",
     "grunt": "^0.4.5",
     "grunt-concurrent": "^2.1.0",
